--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@media (max-width:640px) {
+    a.active{
+        background-color: red;
+        color: red;
+    }
+  }
+
+
